[package]
name = "sevenzip-sys"
version = "0.1.1"
edition = "2021"
authors = [
    "Julia DeMille <me@jdemille.com>"
]
license = "MIT"
description = "FFI bindings to 7-zip"
repository = "https://github.com/judemille/sevenzip-sys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.69"
cc = "1.0"
glob = "0.3"
